Bump to JDK 17 and Discord4J 3.2.6